--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,7 +2,7 @@ name: Terraform Provider For Splunk
 on: [push]
 jobs:
 
-  build:
+  build_linux:
     name: Build
     runs-on: ubuntu-latest
     steps:
@@ -31,6 +31,36 @@ jobs:
       uses: actions/upload-artifact@v1.0.0
       with:
         # Artifact name
-        name: terraform-provider-splunk
+        name: terraform-provider-splunk_linux
+        # Directory containing files to upload
+        path: terraform-provider-splunk
+
+
+  build_windows:
+    name: Build
+    runs-on: windows-latest
+    steps:
+
+    - name: Set up Go 1.13
+      uses: actions/setup-go@v1
+      with:
+        go-version: 1.13
+      id: go
+
+    - name: Check out code into the Go module directory
+      uses: actions/checkout@v1
+
+    - name: Get dependencies
+      run: |
+        go get -v -t -d ./...
+       
+    - name: Build
+      run: go build -v .
+
+    - name: Upload artifact
+      uses: actions/upload-artifact@v1.0.0
+      with:
+        # Artifact name
+        name: terraform-provider-splunk_windows-latest
         # Directory containing files to upload
         path: terraform-provider-splunk
