--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -80,14 +80,11 @@ jobs:
           name: terraform-provider-splunk-windows
           path: terraform-provider-splunk.exe
    
-      - name: GH Release
-        uses: softprops/action-gh-release@v0.1.0
+      - name: Create Release
+        uses: ncipollo/release-action@v1
         with:
-          # Note-worthy description of changes in release
+          artifacts: terraform-provider-splunk.exe, terraform-provider-splunk
           body: Latest Release
-          # Gives the release a custom name
-          name: Splunk Terraform Provider
-          # Creates a draft release
           draft: true
-          # Comma-delimited list of path globs for asset files to upload
-          files:  terraform-provider-splunk.exe,  terraform-provider-splunk
+          name: Splunk Terraform Provider
+          token: ${{ secrets.GITHUB_TOKEN }}
